feat: Implement automated experiment pipeline
This commit introduces a major refactoring to structure the machine learning experiments into a modular and automated pipeline.

The key changes include:

- **Experiment Class**: A new `Experiment` class now encapsulates the entire experimental workflow, from data splitting and preprocessing to training and evaluation.

- **Preprocessor & Trainer Classes**: Introduced a `Preprocessor` class to handle data transformation steps and a `Trainer` base class to abstract the training loop logic.

- **Builder Integration**: The `Builder` class is enhanced to automatically manage the instantiation of the `Experiment`, `Preprocessor`, and `Trainer` objects based on the configuration file.

These changes create a more robust and flexible pipeline, allowing for easy configuration and management of different experimental setups without modifying the main execution code.

--- a/exprconfig.toml
+++ b/exprconfig.toml
@@ -1,21 +1,33 @@
-[[experiment.model.layers]]
+[experiment]
+random_state=0
+test_portion=0.2
+
+[[experiment.preprocessor.methods]]
+class="Standardization"
+
+[experiment.trainer]
+class="MiniBatchTrainer"
+batch_size=10
+epochs=2000
+
+[[experiment.trainer.model.layers]]
 class="FullyConnectedLayer"
 input_size="input" #入力サイズに合わせて自動調節
 output_size=32
 activation_function="Sigmoid"
 
-[[experiment.model.layers]]
+[[experiment.trainer.model.layers]]
 class="FullyConnectedLayer"
 input_size=32
 output_size="output" # 出力サイズに合わせて自動調節
 activation_function="Identity"
 
-[experiment.model.optimizer]
+[experiment.trainer.model.optimizer]
 class="Momentum"
-learning_rate=0.1
+learning_rate=0.01
 momentum_rate=0.9
 log={"eta"="learning_rate", "momentum_rate"="momentum_rate"}
 
-[experiment.model.loss_function]
+[experiment.trainer.model.loss_function]
 class="MSE"
 log={"loss_function"="class"}
